name:                hello-halvm
version:             0.1.0.0
synopsis:            A simple Hello World HaLVM web server
homepage:            hello-halvm.dmj.io
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hello-halvm
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <5
                     , hans
                     , bytestring
  ghc-options: -Wall -rtsopts -O2 "-with-rtsopts=-T"
  if os(halvm)
    hs-source-dirs: halvm-src
    build-depends: HALVMCore
  else
    hs-source-dirs: linux-src
  default-language: Haskell2010
     

